# Rag-chatbot

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
apps/api/: main.py
apps/api/routers/: health.py
configs/: .env.example  dev.yaml
configs/providers/: prod.providers.yaml
core/config/: base.py
core/ingestion/: cleaners.py  dedupe.py  pipeline.py  schemas.py  splitters.py
core/ingestion/loaders/: __init__.py  api_loader.py  base_loader.py  factory.py  interfaces.py  metadata.py  storage_local.py  storage_s3.py
core/logging/: setup.py
core/utils/: id.py
notebooks/: requirements.txt
scripts/: log_tail.py
tests/: conftest.py
tests/unit/: test_health.py
