[project]
name = "rag-chatbot"
version = "0.1.0"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["apps*", "core*"]}}

[tool.setuptools.package-dir]
apps = "apps"
core = "core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"